# smoke-simulation

./: CMakeLists.txt  Makefile  README.md  index.html  smoke  smoke.html  smoke.js  smoke.wasm
assets/: smoke.js  style.css
include/: .smoke.h.swp  smoke.h
src/: load_texture_web.c  load_texture_web.cpp  main.c  main.cpp
